# sqplot

./: README.md  pyproject.toml
sqplot/: __init__.py  parser.py  roles.py  specs.py
sqplot/backends/: common.py
sqplot/backends/plotly/: __init__.py  charts.py  config.py  layout.py  utils.py
ttplot/: __init__.py  parser.py  render.py  roles.py  specs.py
ttplot/backends/plotly/: __init__.py  charts.py  config.py  layout.py  utils.py
